fix text alignment

--- a/iteration2/game1/css/style.css
+++ b/iteration2/game1/css/style.css
@@ -35,6 +35,7 @@ ul {
 ul li div span {
     width: 350px;
     align-items: center;
+    text-align: center;
 }
 
 .wrapper {
